test/files/neg/t2494.scala
object A { val a = { println("a = " + a); a = 1} }
